feat: first pass at a generic GitHubEventTrigger